# DGentic-drive

./: .env.example  .gitignore  CNAME  DGENTIC_COMPLETE.md  FILE_MANIFEST.md  README.md  pyproject.toml
dgentic/: .env.example  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  cli.py  main.py  pyproject.toml  quick_start.py  requirements.txt
dgentic/agents/: agent.py
dgentic/api/: app.py
dgentic/config/: logging_config.py  settings.py
dgentic/core/: exceptions.py  orchestrator.py  types.py
dgentic/examples/: example_tools.py  example_workflows.py
dgentic/integrations/: ai_services.py
dgentic/memory/: memory_system.py
dgentic/models/: router.py
dgentic/security/: permissions.py
dgentic/tests/: conftest.py  test_core.py
dgentic/tools/: runtime.py
docs/: CNAME  DGentic-goal.md  DGentic.md  README.md  project-status.md
docs/agentic-workflows/: Autonomous-mode.md  README.md
docs/architecture/: claude-code-incorporation-study.md  (+1 more)
src/dgentic/: auth.py  (+36 more)
tests/: test_api.py  test_approval_dashboard_contracts.py  test_auth.py  test_cli_runtime.py  test_command_policy.py  test_command_recipes.py  test_database.py  test_filesystem_approvals.py  test_git_workflows.py  test_hook_policy.py  test_managed_settings.py  test_memory_compression_service.py  test_memory_lifecycle_service.py  test_metadata_service.py  test_network_policy.py  test_orchestration.py  test_projects.py  test_provider_runtime.py  test_retrieval_service.py  test_storage.py  test_tool_registry.py  test_tool_runtime.py  test_ui.py  test_ui_browser.py  test_vector_backend.py
(+50 files in other folders)
